--- a/style.css
+++ b/style.css
@@ -8,6 +8,29 @@ body {
 }
 h1 {
     text-align: center;
-    margin-top: 430px;
-    color: rgb(18, 211, 18);
+    margin-top: 400px;
+    color: rgb(36, 197, 4);
+}
+p{
+    text-align: center;
+    color: black;
+}
+div {
+    margin:0;
+    position: absolute;
+   top: 82%;
+   left: 50%;
+   -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+
+
+}
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: right;
+}
+li {
+    display: inline;
 }
